added examples for class 3

--- a/output/bases-de-datps.html
+++ b/output/bases-de-datps.html
@@ -22,42 +22,61 @@
     ![]()
 ---
 class: center, middle, light
-# Tipos básicos 1
+# Bases de Datos
 ## Mauricio Collazos
 ---
-# Tipos en Python
-- None
-- Numéricos
-- Secuenciales
-- Mapeo
-- Ejecutables
+# Tipos de bases de datos
+- SQL
+- No SQL
+---
+# SQL
+Standard Query Language
+- Manejo estandarizado de algebra relacional
+- Definición de estructura de datos
+- Relación entre los datos
+- Eficiente para millones de datos
+- Normalización
+---
+
+
+# [12 Factor App](https://12factor.net/es/)
+---
+# Estructura de proyectos
 - Módulos
-- Clases
-- Objeto
-- Archivos
-- Internos
+- Estructura basada en bloques
 ---
-# Sintaxis
-- Importancia de la identación
-- Palabras reservadas
-- Caracteres de delimitación
+# Características de cada bloque
+- Urls
+- Controladores
+- Modelos
+- Vista 
+- Plantillas
+- Archivos estáticos
+- Utilidades
+- Configuración
 ---
-# Tipos *callable*
-- Funciones
-- Clases
-- Instancias
+# Ambientes de python
+- Virtualenvs
+- Pyenvs
+- Conda
+
+--- 
+# Modularidad de python
+
+- Aislamiento de paquetes
+- Dependencia de paquetes de SO
+--- 
+# Manejo de configuración
+- Configuración por archivos
+- Parametrización de aplicación por medio de archivos planos
+- Importancia de aislamiento
+- Contenedores y empaquetamiento
 ---
-# Operadores
-- Operadores matemáticos
-- Operadores lógicos
-- Funciones integradas
-- Operadores de secuencias y mapas
----
-# Expresiones
-- Condicionales
-- Ciclos
-- Excepciones
-- Contexto
+# Ambientes 
+- Desarrollo
+- Pruebas
+- Staging
+- Producción
 
 </textarea>
 <script src="/theme/js/remark.min.js"></script>
@@ -65,9 +84,6 @@ class: center, middle, light
     var slideshow = remark.create();
 </script>
 
-                    <li><a href="/pages/bases-de-datos-con-docker.html">
-        Bases de Datos con Docker
-    </a></li>
                     <li><a href="/pages/introduccion-a-python.html">
         Introducción a python
     </a></li>
