--- a/output/introduccion.html
+++ b/output/introduccion.html
@@ -229,6 +229,9 @@ class: center, middle
     var slideshow = remark.create();
 </script>
 
+                    <li><a href="/pages/bases-de-datos-con-docker.html">
+        Bases de Datos con Docker
+    </a></li>
                     <li><a href="/pages/introduccion-a-python.html">
         Introducción a python
     </a></li>
