--- a/output/arquitectura.html
+++ b/output/arquitectura.html
@@ -80,6 +80,9 @@ class: center, middle, light
     var slideshow = remark.create();
 </script>
 
+                    <li><a href="/pages/bases-de-datos-con-docker.html">
+        Bases de Datos con Docker
+    </a></li>
                     <li><a href="/pages/introduccion-a-python.html">
         Introducción a python
     </a></li>
