--- a/output/bases-de-datos.html
+++ b/output/bases-de-datos.html
@@ -22,43 +22,53 @@
     ![]()
 ---
 class: center, middle, light
-# Tipos básicos 1
+# Bases de Datos
 ## Mauricio Collazos
 ---
-# Tipos en Python
-- None
-- Numéricos
-- Secuenciales
-- Mapeo
-- Ejecutables
-- Módulos
-- Clases
-- Objeto
-- Archivos
-- Internos
+# Tipos de bases de datos
+- SQL
+- No SQL
 ---
-# Sintaxis
-- Importancia de la identación
-- Palabras reservadas
-- Caracteres de delimitación
----
-# Tipos *callable*
-- Funciones
-- Clases
-- Instancias
----
-# Operadores
-- Operadores matemáticos
-- Operadores lógicos
-- Funciones integradas
-- Operadores de secuencias y mapas
----
-# Expresiones
-- Condicionales
-- Ciclos
-- Excepciones
-- Contexto
+# SQL
+Standard Query Language:
 
+- Manejo estandarizado de algebra relacional
+- Definición de estructura de datos
+- Relación entre los datos
+- Eficiente para millones de datos
+- Normalización
+---
+# Bases de datos SQL
+- MySQL
+- PostgreSQL
+- MsSQL
+- MariaDB
+- Oracle
+- SQLite
+---
+# ORM
+Object Relational Mapper
+- SQLAlchemy
+- Peewee 
+- Django ORM
+- Pony ORM
+
+[Mas información](https://www.fullstackpython.com/object-relational-mappers-orms.html)
+---
+# No SQL
+Todo lo que no es SQL
+- Documentales
+- Grafos
+- Llave Valor
+- Orientadas a Objetos
+- Tabular
+---
+# Bases de datos No SQL
+- Mongo
+- Cassandra
+- Redis
+- Neo4j
+- CouchDB
 </textarea>
 <script src="/theme/js/remark.min.js"></script>
 <script>
