added git status

--- a/output/plantillas.html
+++ b/output/plantillas.html
@@ -56,6 +56,9 @@ class: center, middle, light
                     <li><a href="/pages/bases-de-datos-con-docker.html">
         Bases de Datos con Docker
     </a></li>
+                    <li><a href="/pages/estructura-proyecto-flask.html">
+        Estructura Proyecto Flask
+    </a></li>
                     <li><a href="/pages/introduccion-a-python.html">
         Introducción a python
     </a></li>
