--- a/output/django-cheat-sheet.html
+++ b/output/django-cheat-sheet.html
@@ -80,6 +80,9 @@ pip install -r requirements.txt
                     <li><a href="/pages/bases-de-datos-con-docker.html">
         Bases de Datos con Docker
     </a></li>
+                    <li><a href="/pages/estructura-proyecto-flask.html">
+        Estructura Proyecto Flask
+    </a></li>
                     <li><a href="/pages/introduccion-a-python.html">
         Introducción a python
     </a></li>
