--- a/output/flask-cheat-sheet.html
+++ b/output/flask-cheat-sheet.html
@@ -84,7 +84,34 @@ set FLASK_DEBUG=1
 set FLASK_APP=[modulo_del_proyecto]
 flask run
 ```
-
+---
+**Estructura de un proyecto en flask**
+```bash
+├── README.md
+└── blog
+    ├── __init__.py
+    ├── app.py
+    ├── applications
+    │   ├── __init__.py
+    │   └── blog
+    │       ├── __init__.py
+    │       ├── conf.py
+    │       ├── models.py
+    │       ├── templates
+    │       │   ├── create.html
+    │       │   ├── detail.html
+    │       │   ├── list.html
+    │       │   └── update.html
+    │       ├── urls.py
+    │       └── views.py
+    ├── config.py
+    ├── database.py
+    ├── db.sqlite3
+    ├── static
+    │   └── style.css
+    └── templates
+        └── base.html
+```
 
 </textarea>
 <script src="/theme/js/remark.min.js"></script>
@@ -94,6 +121,9 @@ flask run
 
                     <li><a href="/pages/bases-de-datos-con-docker.html">
         Bases de Datos con Docker
+    </a></li>
+                    <li><a href="/pages/estructura-proyecto-flask.html">
+        Estructura Proyecto Flask
     </a></li>
                     <li><a href="/pages/introduccion-a-python.html">
         Introducción a python
