added class 6 examples and modified flask structure document

--- a/output/ejercicios.html
+++ b/output/ejercicios.html
@@ -48,6 +48,7 @@ class: center, middle, light
     var slideshow = remark.create();
 </script>
 
+                    <li><a href="/pages/block-title-base-endblock.html">{% block title %}base{% endblock %}</a></li>
                     <li><a href="/pages/bases-de-datos-con-docker.html">
         Bases de Datos con Docker
     </a></li>
