--- a/output/bases-de-datos.html
+++ b/output/bases-de-datos.html
@@ -75,6 +75,7 @@ Todo lo que no es SQL
     var slideshow = remark.create();
 </script>
 
+                    <li><a href="/pages/block-title-base-endblock.html">{% block title %}base{% endblock %}</a></li>
                     <li><a href="/pages/bases-de-datos-con-docker.html">
         Bases de Datos con Docker
     </a></li>
