--- a/output/flask-cheat-sheet.html
+++ b/output/flask-cheat-sheet.html
@@ -119,6 +119,7 @@ flask run
     var slideshow = remark.create();
 </script>
 
+                    <li><a href="/pages/block-title-base-endblock.html">{% block title %}base{% endblock %}</a></li>
                     <li><a href="/pages/bases-de-datos-con-docker.html">
         Bases de Datos con Docker
     </a></li>
