--- a/output/git-cheatsheet.html
+++ b/output/git-cheatsheet.html
@@ -68,6 +68,7 @@ git pull origin master
     var slideshow = remark.create();
 </script>
 
+                    <li><a href="/pages/block-title-base-endblock.html">{% block title %}base{% endblock %}</a></li>
                     <li><a href="/pages/bases-de-datos-con-docker.html">
         Bases de Datos con Docker
     </a></li>
