--- a/output/introduccion.html
+++ b/output/introduccion.html
@@ -229,6 +229,7 @@ class: center, middle
     var slideshow = remark.create();
 </script>
 
+                    <li><a href="/pages/block-title-base-endblock.html">{% block title %}base{% endblock %}</a></li>
                     <li><a href="/pages/bases-de-datos-con-docker.html">
         Bases de Datos con Docker
     </a></li>
