added flask example

--- a/output/api.html
+++ b/output/api.html
@@ -59,16 +59,28 @@ class: center, middle, light
 - Que los nombres sean explicatorios
 - Documente TODO
 ---
+# No todo CRUD es RESTful
+- Negociación de contenido
+- HATEOAS (Hypermedia As The Engiene of Application State)
+- Seguridad
+- Versionamiento
+---
+# Representaciones
+- Un recurso puede tener diferentes representaciones
+- Cada representación debe tener suficiente información para modificar el objeto
+---
 # Librerías
 
 - [Flask-RESTful](https://flask-restful.readthedocs.io/en/latest/)
 - [Django Rest Framework](https://www.django-rest-framework.org/)
+
 </textarea>
 <script src="/theme/js/remark.min.js"></script>
 <script>
     var slideshow = remark.create();
 </script>
 
+                    <li><a href="/pages/block-title-base-endblock.html">{% block title %}base{% endblock %}</a></li>
                     <li><a href="/pages/bases-de-datos-con-docker.html">
         Bases de Datos con Docker
     </a></li>
