changed styles for devhack

--- a/output/arquitectura.html
+++ b/output/arquitectura.html
@@ -21,9 +21,10 @@
 <textarea id="source">
     ![]()
 ---
-class: center, middle, light
+class: center, middle, light, first-slide
 # Arquitectura
 ## Mauricio Collazos
+.footnote[]
 ---
 class: center, middle, light
 # D R Y
