--- a/output/autenticacion.html
+++ b/output/autenticacion.html
@@ -20,17 +20,12 @@
 
 <textarea id="source">
     ![]()
----
-Pendientes
-
-- [Almacenamiento S3](https://blog.contraslash.com/almacenar-archivos-en-s3-desde-django/)
-- [Migrar a MySQL](https://blog.contraslash.com/migrar-de-sqlite3-a-mysql-django/)
 
 ---
-class: center, middle, light
+class: center, middle, light, first-slide
 # Autenticación
 ## Mauricio Collazos
-
+.footnote[]
 ---
 # Objetivo
 Verificar la identidad de un usuario
