--- a/output/bases-de-datos.html
+++ b/output/bases-de-datos.html
@@ -21,9 +21,10 @@
 <textarea id="source">
     ![]()
 ---
-class: center, middle, light
+class: center, middle, light, first-slide
 # Bases de Datos
 ## Mauricio Collazos
+.footnote[]
 ---
 # Tipos de bases de datos
 - SQL
