--- a/output/despliegue.html
+++ b/output/despliegue.html
@@ -21,10 +21,10 @@
 <textarea id="source">
     ![]()
 ---
-class: center, middle, light
+class: center, middle, light, first-slide
 # Despliegue
 ## Mauricio Collazos
-
+.footnote[]
 ---
 # Modelos de servicio
 
