--- a/output/ejercicios-2.html
+++ b/output/ejercicios-2.html
@@ -21,10 +21,10 @@
 <textarea id="source">
     ![]()
 ---
-class: center, middle, light
+class: center, middle, light, first-slide
 # Ejercicios 2
 ## Mauricio Collazos
-
+.footnote[]
 ---
 class: center, middle, light
 # Encuesta
