--- a/output/ejercicios.html
+++ b/output/ejercicios.html
@@ -21,9 +21,10 @@
 <textarea id="source">
     ![]()
 ---
-class: center, middle, light
+class: center, middle, light, first-slide
 # Ejercicios
 ## Mauricio Collazos
+.footnote[]
 ---
 # Lista de Tareas
 - Crear un ambiente
