--- a/content/pages/base.html
+++ b/content/pages/base.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+        <meta name="date" content="2018-10-10">
         <title>{% block title %}base{% endblock %}</title>
 
         {% block generic-css %}
