--- a/output/api.html
+++ b/output/api.html
@@ -21,10 +21,10 @@
 <textarea id="source">
     ![]()
 ---
-class: center, middle, light
+class: center, middle, light, first-slide
 # APIs
 ## Mauricio Collazos
-
+.footnote[]
 ---
 # HTTP
   - Recursos
