--- a/output/fundamentos.html
+++ b/output/fundamentos.html
@@ -21,9 +21,10 @@
 <textarea id="source">
     ![]()
 ---
-class: center, middle, light
+class: center, middle, light, first-slide
 # Tipos básicos 1
 ## Mauricio Collazos
+.footnote[]
 ---
 # Tipos en Python
 - None
