--- a/output/introduccion.html
+++ b/output/introduccion.html
@@ -21,13 +21,13 @@
 <textarea id="source">
     ![]()
 ---
-class: center, middle, light
+class: center, middle, light, first-slide
 # Introducción
 ## Mauricio Collazos
+.footnote[]
 ---
 class: center, middle
 # ¿Porqué Python?
-
 - Elegancia
 - Sencillez
 - Versatilidad
