--- a/output/plantillas.html
+++ b/output/plantillas.html
@@ -21,9 +21,10 @@
 <textarea id="source">
     ![]()
 ---
-class: center, middle, light
+class: center, middle, light, first-slide
 # Plantillas
 ## Mauricio Collazos
+.footnote[]
 ---
 # Plantillas
 - string.Template
