added explanation to operators

--- a/content/pages/sintaxis.html
+++ b/content/pages/sintaxis.html
@@ -155,48 +155,52 @@ No es necesario definir ningún caracter extra
 </tr>
 </thead>
 <tbody><tr>
-  <td>+</td>
-  <td>-</td>
-  <td>*</td>
-  <td>**</td>
-  <td>/</td>
+  <td>+ (Suma)</td>
+  <td>- (Resta)</td>
+  <td>* (Multiplicación)</td>
+  <td>** (Potencia)</td>
+  <td>/ (División)</td>
 </tr>
 <tr>
-  <td>%</td>
-  <td>&gt;&gt;</td>
-  <td>&lt;&lt;</td>
-  <td>&amp;</td>
-  <td>|</td>
+  <td>% (Módulo)</td>
+  <td>&gt;&gt; (Shift derecho binario)</td>
+  <td>&lt;&lt; (Shift izquierdo binario)</td>
+  <td>&amp; (Conjunción binaria)</td>
+  <td>| (Disyunción binaria)</td>
 </tr>
 <tr>
-  <td>^</td>
-  <td>+=</td>
-  <td>-=</td>
-  <td>*=</td>
-  <td>**=</td>
+  <td>^ (XOR binario)</td>
+  <td>+= (Suma y asignación)</td>
+  <td>-= (Resta y asignación)</td>
+  <td>*= (Multiplicación y asignación)</td>
+  <td>**= (Potencia y asignación)</td>
 </tr>
 <tr>
-  <td>/=</td>
-  <td>%=</td>
-  <td>&lt;&lt;=</td>
-  <td>&gt;&gt;=</td>
-  <td>&amp;=</td>
+  <td>/= (División y asignación)</td>
+  <td>%= (Módulo y asignación)</td>
+  <td>&lt;&lt;= (Shift izquierdo y asignación)</td>
+  <td>&gt;&gt;= (Shift derecho y asignación)</td>
+  <td>&amp;= (AND binario y asignación)</td>
 </tr>
 <tr>
-  <td>=</td>
-  <td>^=</td>
-  <td>~</td>
-  <td>&lt;</td>
-  <td>&gt;</td>
+  <td>= (Asignación)</td>
+  <td>^= (XOR y asignación)</td>
+  <td>~ (Negación binaria)</td>
+  <td>&lt; (Menor que)</td>
+  <td>&gt; (Mayor que)</td>
 </tr>
 <tr>
-  <td>&lt;=</td>
-  <td>&gt;=</td>
-  <td>==</td>
-  <td>!=</td>
-  <td>&lt;&gt;</td>
+  <td>&lt;= (Menor o igual que)</td>
+  <td>&gt;= (Mayor o igual que)</td>
+  <td>== (Comparación)</td>
+  <td>!= (Diferencia)</td>
+  <td>&lt;&gt; (Diferencia, Obsoleto en Python3)</td>
 </tr>
 </tbody></table>
+
+  <a href="https://www.tutorialspoint.com/python/python_basic_operators.htm">
+    Mas sobre operadores básicos en Python
+  </a>
 
 
 <p>Los caracteres de delimitación son los siguientes</p>
