corrected issues with class 3

--- a/output/virtualenvs-cheat-sheet.html
+++ b/output/virtualenvs-cheat-sheet.html
@@ -86,6 +86,20 @@ Virtualenv
 ```bash
 pip install -r requirements.txt
 ```
+
+
+**Instalar paquete**
+
+Conda
+```bash
+conda install [nombre_paquete]
+```
+
+Virtualenv
+```bash
+pip install [nombre_paquete]
+```
+
 </textarea>
 <script src="/theme/js/remark.min.js"></script>
 <script>
