removed project and modified content from class 4

--- a/output/index.html
+++ b/output/index.html
@@ -169,7 +169,7 @@ class: center, middle, light, first-slide
 - No SQL
 ---
 # SQL
-Standard Query Language:
+Structured Query Language:
 
 - Manejo estandarizado de algebra relacional
 - Definición de estructura de datos
@@ -217,7 +217,7 @@ class: center, middle, light, first-slide
 # Operaciones sobre datos
 - Operaciones Condicionales
 - Operaciones Iterativas
---- 
+---
 # Extensibilidad
 - Herencia de plantillas
 - Filtros
